--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "lucide-react": "^0.323.0",
+    "mongodb": "^6.18.0",
+    "mongoose": "^8.17.1",
     "next": "14.1.0",
     "qs": "^6.11.2",
     "react": "^18",
