--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "imaginify",
+  "name": "imaginera",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -18,11 +18,13 @@
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-toast": "^1.1.5",
     "class-variance-authority": "^0.7.0",
+    "cloudinary": "^2.0.1",
     "clsx": "^2.1.0",
     "lucide-react": "^0.323.0",
     "mongodb": "^6.18.0",
     "mongoose": "^8.17.1",
     "next": "14.1.0",
+    "next-cloudinary": "^5.20.0",
     "qs": "^6.11.2",
     "react": "^18",
     "react-dom": "^18",
